# bolajakolim

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/accounts/: admin.py
backend/accounts/api/: urls.py  views.py
backend/accounts/api/serializers/: input.py  output.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/models/: user.py
backend/accounts/services/: auth_service.py
backend/accounts/tests/: test_auth.py
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/smetalar/: admin.py  apps.py
backend/smetalar/api/: filters.py  pagination.py  urls.py  views.py
backend/smetalar/api/serializers/: input.py  output.py
backend/smetalar/migrations/: 0001_initial.py
backend/smetalar/models/: __init__.py  davr_xarajat.py  inventory.py  other_expense.py  product.py  raw_material.py  salary.py  smeta.py  sotish_rejasi.py
backend/smetalar/selectors/: smeta_selector.py
backend/smetalar/services/: excel_service.py  smeta_service.py
backend/smetalar/tasks/: excel_tasks.py
backend/smetalar/tests/: test_api.py  test_models.py
deploy/: .env.production.example  README.md  celery.service  deploy.sh  gunicorn.conf.py  gunicorn.service  nextjs.service  nginx.conf  redeploy.sh
frontend/: .env.production  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FormWizard.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/utils/: calculations.ts  excelGenerator.ts
(+17 files in other folders)
